# Projet_FAR

./: CMakeLists.txt  README.md  client.c  client1.c  client2.c  comm_utils.h  compile.sh  main.c  prof_code.c  server.c  serveur.c  testserveur2.c  utils.c
Projet_FAR _cecile/: client.c  code prof.c  server.c
Projet_FAR _cecile/scripts/: client  compile_and_server.sh  server
Projet_FAR _cecile/utils/: utils.c
Projet_FAR _cecile/utils/headers/: server_utils.h  utils.h
client/: client.c  client_utils.c
client/assets/: client.sh  man.txt
client/assets/client_files/: client1.txt  client2.txt  client3.sh
client/headers/: client_utils.h
common/: file_utils.c  utils.c
common/headers/: utils.h
headers/: utils.h
remake/: client.sh  client_new.c  compile_new.sh  server.c  serveur_new.c  utils.c  utils.h
scripts/: client.sh  compile_and_server.sh  server.sh
server/: server.c  server_utils.c
server/assets/: server.sh
server/assets/server_files/: serv1.txt  serv2.txt  serv3.sh
server/headers/: server_utils.h
threads/: client_thread.c  compile_thread.sh  serveur_thread.c
utils/: client_utils.c  file_utils.c  rooms_utils.c  server_utils.c  utils.c
utils/headers/: client_utils.h  file_utils.h  rooms_utils.h  server_utils.h  utils.h
